
plugins {
    id 'application'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

// tag::repositories[]
repositories {
    mavenLocal()
    mavenCentral()
    maven {
      url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}
// end::repositories[]

// tag::dependencies[]
dependencies {
    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.8', classifier: 'all'
    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'
}
//end::dependencies[]

task fortifyScan(type: JavaExec)  {
    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}
